[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = { version = "0.3.0", features = ["serde-json"] }
axum = "0.6.18"
color-eyre = "0.6.2"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
