[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]

[dependencies]
rocket = "=0.5.0-rc.3"
ureq = "2.6.2"
serde = "1.0"
serde_json = "1.0"
